package com.robotino.eventBus;

public class Event {
    public Event(){}

}
